# giford-api

./: .gitignore  README.md  pyproject.toml
giford_api/: main.py
giford_api/routers/: basic.py
giford_api/util/: __init__.py
